# poc-knowledge-base

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: config.py  db.py  exceptions.py  llm.py  logging_config.py  main.py  schema_selector.py  schemas.py  sql_utils.py
app/core/: __init__.py  config.py  llm.py
app/db/: __init__.py  database.py
app/logging/: __init__.py  exceptions.py  logging_config.py
app/parsers/: __init__.py  base.py  csv_parser.py  excel_parser.py
app/routers/: chat.py  datasets.py  health.py  query.py  settings.py
app/services/: cache.py  chat.py  conversation.py  query.py  settings.py  upload.py  visualization.py
app/utils/: __init__.py  sql_utils.py  type_inference.py
static/: index.html  index.js  style.css
static/css/: charts.css  chat.css  components.css  layout.css  results.css  upload.css  utilities.css  variables.css
static/js/: api.js  app.js  charts.js  chat.js  config.js  datasets.js  query.js  upload.js  utils.js
